# neutron-local-services-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
devstack/: lab-bootstrap.sh  lab-push.sh  local.conf.compute.sample  local.conf.sample  plugin.sh  settings
devstack/lab-tests/: README.md  lab-functional.sh  run-on-lab.sh  runner.sh
devstack/lab-tests/cases/: 01-localport-lifecycle.sh  02-host-routes-injection.sh  03-agent-extension-events.sh  04-netns-provisioning.sh  05-vip-reconciliation.sh  06-nat-plugin.sh  07-multitenant-isolation.sh  08-multichassis-isolation.sh  09-underlay-egress.sh  10-proxy-plugin.sh
devstack/lab-tests/lib/: assert.sh  case.sh  config.sh  multichassis.sh  netns.sh  rest.sh  underlay.sh
devstack/lab-tests/lib/fixtures/: m11-tcp-backend.py
docs/: exposure-plugins.md  limitations.md
docs/architecture/: nat-plugin.md  overview.md  proxy-plugin.md
neutron_local_services/: conf.py  constants.py  host_routes.py  policies.py
neutron_local_services/agent/: extension.py  netns.py  registry_client.py  underlay.py
neutron_local_services/agent/plugins/: base.py  nat.py  proxy.py
neutron_local_services/agent/plugins/check_scripts/: check_dns.sh  check_ntp.sh
neutron_local_services/api/: local_services.py
neutron_local_services/cli/: _client.py  _format.py
neutron_local_services/cli/osc/: __init__.py  backend.py  binding.py  service.py
neutron_local_services/db/: local_services_db.py  models.py
neutron_local_services/db/migration/alembic_migrations/: __init__.py  branch_label.py  env.py
neutron_local_services/db/migration/alembic_migrations/versions/: 0001_initial.py  0002_extend_exposure_enum.py  0003_rename_exposure_plugins.py
neutron_local_services/extensions/: local_services.py
neutron_local_services/ovn/: localport.py
neutron_local_services/plugin/: plugin.py
neutron_local_services/tests/unit/: test_agent_extension.py  test_host_routes.py  test_localport.py  test_netns.py  test_plugin.py  test_plugins_base.py  test_plugins_nat.py  test_plugins_proxy.py  test_registry_client.py  test_underlay.py
neutron_local_services/tests/unit/cli/: test_client.py  test_commands.py
proxy/: Cargo.toml
proxy/priv/: Cargo.toml
proxy/priv/src/: catalog.rs  main.rs  netns.rs  nonce.rs  rpc.rs
proxy/scm/: Cargo.toml
proxy/scm/src/: lib.rs
proxy/wire/: Cargo.toml
proxy/wire/src/: catalog.rs  lib.rs
proxy/worker/: Cargo.toml
proxy/worker/src/: admin.rs  catalog.rs  dispatcher.rs  hc.rs  lb.rs  main.rs  metrics.rs  priv_client.rs  quota.rs  tcp.rs  tenant.rs  udp.rs  watchdog.rs
