[metadata]
name = neutron-local-services
summary = OpenStack Neutron extension exposing operator-defined local services to tenant networks via link-local VIPs
description_file = README.md
description_content_type = text/markdown
author = Andrew Austin
author_email = acaustin@summerpanic.com
license = Apache-2.0
classifiers =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages =
    neutron_local_services

[entry_points]
neutron.service_plugins =
    local_services = neutron_local_services.plugin.plugin:LocalServicesPlugin

neutron.policies =
    neutron_local_services = neutron_local_services.policies:list_rules

neutron.db.alembic_migrations =
    neutron-local-services = neutron_local_services.db.migration:alembic_migrations

oslo.config.opts =
    neutron_local_services = neutron_local_services.conf:list_opts

neutron.agent.ovn.extensions =
    local_services = neutron_local_services.agent.extension:LocalServicesExtension
