[metadata]
name = neutron-local-services
summary = OpenStack Neutron extension exposing operator-defined local services to tenant networks via link-local VIPs
description_file = README.md
description_content_type = text/markdown
author = Andrew Austin
author_email = acaustin@summerpanic.com
license = Apache-2.0
classifiers =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages =
    neutron_local_services

[entry_points]
neutron.service_plugins =
    local_services = neutron_local_services.plugin.plugin:LocalServicesPlugin

neutron.policies =
    neutron_local_services = neutron_local_services.policies:list_rules

neutron.db.alembic_migrations =
    neutron-local-services = neutron_local_services.db.migration:alembic_migrations

oslo.config.opts =
    neutron_local_services = neutron_local_services.conf:list_opts

neutron.agent.ovn.extensions =
    local_services = neutron_local_services.agent.extension:LocalServicesExtension

openstack.cli.extension =
    local_services = neutron_local_services.cli.osc

openstack.local_services.v2 =
    local-service_create         = neutron_local_services.cli.osc.service:CreateLocalService
    local-service_list           = neutron_local_services.cli.osc.service:ListLocalService
    local-service_show           = neutron_local_services.cli.osc.service:ShowLocalService
    local-service_set            = neutron_local_services.cli.osc.service:SetLocalService
    local-service_delete         = neutron_local_services.cli.osc.service:DeleteLocalService
    local-service_backend_create = neutron_local_services.cli.osc.backend:CreateLocalServiceBackend
    local-service_backend_list   = neutron_local_services.cli.osc.backend:ListLocalServiceBackend
    local-service_backend_show   = neutron_local_services.cli.osc.backend:ShowLocalServiceBackend
    local-service_backend_set    = neutron_local_services.cli.osc.backend:SetLocalServiceBackend
    local-service_backend_delete = neutron_local_services.cli.osc.backend:DeleteLocalServiceBackend
    local-service_binding_create = neutron_local_services.cli.osc.binding:CreateLocalServiceBinding
    local-service_binding_list   = neutron_local_services.cli.osc.binding:ListLocalServiceBinding
    local-service_binding_show   = neutron_local_services.cli.osc.binding:ShowLocalServiceBinding
    local-service_binding_set    = neutron_local_services.cli.osc.binding:SetLocalServiceBinding
    local-service_binding_delete = neutron_local_services.cli.osc.binding:DeleteLocalServiceBinding
