[workspace]
resolver = "2"
members = ["wire", "scm", "priv", "worker"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
nix = { version = "0.29", features = ["fs", "net", "socket", "sched", "user", "process", "uio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# worker-only
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync", "time", "signal", "fs", "process"] }
axum = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower = "0.5"
notify = "8"
hickory-proto = "0.25"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
