[package]
name = "nls-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nls-proxy"
path = "src/main.rs"

[dependencies]
nls-proxy-wire = { path = "../wire" }
nls-proxy-scm = { path = "../scm" }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
notify = { workspace = true }
hickory-proto = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tempfile = "3"
